--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "proj4": "^2.9.0"
   },
   "devDependencies": {
     "dotenv-cli": "^7.2.1",
