--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.7",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
