--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,17 @@
   "private": true,
   "proxy": "http://localhost:8000/",
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.1",
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.3.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.1.4",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -18,7 +25,8 @@
     "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "stream": "^0.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
