--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "frontend-install": "npm install --prefix frontend",
     "frontend": "npm start --prefix frontend",
     "frontend-build": "npm run build --prefix frontend",
-    "build": "npm run backend-install && npm run frontend-install && npm run frontend-build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run backend-install && npm run frontend-install && npm run frontend-build"
   },
   "repository": {
     "type": "git",
@@ -27,5 +26,6 @@
   "homepage": "https://github.com/treypisano/Street-Lite#readme",
   "dependencies": {
     "@react-google-maps/api": "^2.18.1"
-  }
+  },
+  "devDependencies": {},
 }
