--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "dotenv node ./bin/www",
     "dev": "dotenv nodemon ./bin/www --inspect"
   },
   "dependencies": {
