--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,14 @@
     "dev": "dotenv nodemon ./bin/www --inspect"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "csrf": "^3.1.0",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
